# subdomain-scout

./: .gitignore  AGENTS.md  CHANGELOG.md  CLONE_FEATURES.md  CONTRIBUTING.md  Dockerfile  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT.md  PROJECT_MEMORY.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  UPDATE.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/subdomain_scout/: cli.py  ct.py  diff.py  dns_client.py  scanner.py  takeover.py  validation.py  version.py
tests/: test_cli_ct.py  test_cli_diff.py  test_cli_scan.py  test_cli_takeover.py  test_cli_version.py  test_ct.py  test_dns_client.py  test_resume.py  test_scanner.py  test_smoke.py  test_takeover.py  test_validation.py  test_wildcard.py
